--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,6 +1,12 @@
+Tue Mar 28 05:38:07 2000  Tim Janik  <timj@gtk.org>
+
+	* glib-gobject.[hc]: GObject implementation.
+
+	* builtin_bsepattern.c: capitalize procedure categories.
+
 Sat Mar 25 10:31:40 2000  Tim Janik  <timj@gtk.org>
 
-	* glib-genums.h: new file, takling over most of the bseenum.[hc]
+	* glib-genums.[hc]: new files, takling over most of the bseenum.[hc]
 	functionality.
 
 	* bsequery.c: quickly added facility to iterate over the
