--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Tue Apr 11 04:23:08 2000  Tim Janik  <timj@gtk.org>
+
+	* *.[hc]: port over from BseParam to GValue and [GB]ParamSpecs.
+
 Tue Mar 28 05:39:44 2000  Tim Janik  <timj@gtk.org>
 
 	* fldbsepattern.c: capitalize procedure categories.
