--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+Tue Apr 11 04:23:56 2000  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstgconfig.[hc]: port over to use GParamSpec, GValue
+	and for GObject hirarchy base type.
+
+	* beast-gtk/bstparam.[hc]: operate on a GValue+GParamSpec,
+	instead of BseParam now. use BLib's B_SEQ_PARAM_* ids to
+	implement the switch()es.
+
+	* beast-gtk/bstprocedure.[hc]: parameter/value port. this 
+	introduced some API changes, mostly wrg preset parameters,
+	they need to be set incrementally now from a value+name
+	pair.
+
+	* beast-gtk/bstpatterndialog.c: port over to new procedure
+	API and GValue/BParamSpec.
+
+Thu Mar 30 16:58:14 2000  Tim Janik  <timj@gtk.org>
+
+	* configure.in: setup BLIB_CFLAGS, BLIB_LIBS and generate
+	blib/Makefile and blib/blibconfig.h.
+
 Mon Mar 27 13:52:49 2000  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstpatterneditor.[hc]: changed BstPEActionType enum,
