--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+* Complete reimplementation of the type and parameter systems
+  for integration with upcomming GLib 1.4 facilities.
 * New synthesis modules:
   DavXTalString	- string synthesizer
   DavGuitar     - physical modelling acoustic guitar
