--- a/blib/ChangeLog
+++ b/blib/ChangeLog
@@ -1,3 +1,8 @@
+Mon Apr 17 20:45:50 2000  Tim Janik  <timj@gtk.org>
+
+	* glib-gobject.c (g_object_base_class_finalize): oops, don't unset
+	n_params prior to destructing them.
+
 Tue Apr 11 04:28:10 2000  Tim Janik  <timj@gtk.org>
 
 	* fixed a coupole of bugs in the initial parameter/object
