--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Apr 30 04:35:18 2000  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstpatterneditor.c (bst_pattern_editor_init): the
+	default base_octave is 1 after the (not-so-)recent octave revamp.
+
 Thu Apr 20 00:27:28 2000  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstcanvaslink.c (bst_canvas_link_set_icsource): 
