--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,9 @@
+Thu May 25 02:38:18 2000  Tim Janik  <timj@gtk.org>
+
+	* icons/chorus.c: preliminary icon for DavChorus.
+
+	* davchorus.c: give this a preliminary ugly icon.
+
 Mon May 15 14:22:16 2000  Tim Janik  <timj@gtk.org>
 
 	* davchorus.[hc]: new chorus module from David A. Bartold
