--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,12 @@
+* Effects support for sequencer notes
+* Added support for Cubic Interpolation
+* Sequencer mixer cleanups and speedups
 * Complete reimplementation of the type and parameter systems
   for integration with upcomming GLib 1.4 facilities.
 * New synthesis modules:
   DavXTalString	- string synthesizer
   DavGuitar     - physical modelling acoustic guitar
+  DavChorus	- chorusing filter
 
 Overview of Changes in BEAST/BSE 0.3.2:
 
