--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Wed Nov 14 03:37:14 2001  Tim Janik  <timj@gtk.org>
+
+	* bsequery.c (show_procdoc): s/param_get/param_spec_get/.
+
 Tue Nov 13 01:44:01 2001  Tim Janik  <timj@gtk.org>
 
 	* gsllooper.[hc]: minor fixes.
