--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Wed Nov 14 08:36:41 2001  Tim Janik  <timj@gtk.org>
+
+	* gsl*.[hc]: applied heavily modified patch from stefan to make
+	things more portable and get rid of various GCC-isms.
+
 Wed Nov 14 03:37:14 2001  Tim Janik  <timj@gtk.org>
 
 	* bsequery.c (show_procdoc): s/param_get/param_spec_get/.
