--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,9 @@
+Wed Nov 14 10:37:24 2001  Tim Janik  <timj@gtk.org>
+
+	* gslcommon.[hc]: add more error types.
+	
+	* gslconvert.[hc]: preliminary UTF8 conversion.
+
 Wed Nov 14 08:36:41 2001  Tim Janik  <timj@gtk.org>
 
 	* gsl*.[hc]: applied heavily modified patch from stefan to make
