--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Sun Nov 25 23:36:57 2001  Tim Janik  <timj@gtk.org>
+
+	* bsetype.h: fix fundamental type IDs accoring to recent
+	glib changes.
+
 Wed Nov 14 10:37:24 2001  Tim Janik  <timj@gtk.org>
 
 	* gslcommon.[hc]: add more error types.
