--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Sun Nov 25 23:47:16 2001  Tim Janik  <timj@gtk.org>
+
+	* gsl*.[hc]: applied patch from stefan to use g_newa() instead
+	of g_alloca() and fix other minor portability issues.
+
 Sun Nov 25 23:36:57 2001  Tim Janik  <timj@gtk.org>
 
 	* bsetype.h: fix fundamental type IDs accoring to recent
